# lms-graphql

./: .gitignore  README.md  example.env  jest.config.js  package.json  tsconfig.json
__tests__/: index.test.ts
__tests__/config/: constants.spec.ts  mailer.spec.ts
__tests__/middlewares/: asynchandler.spec.ts  errorhandler.spec.ts
__tests__/services/auth/: controller.spec.ts
__tests__/util/: password-generator.spec.ts
assets/templates/: meeting.hbs  otp.hbs  password-reset.hbs  password.hbs  reset-password.hbs
prisma/: erd.md  schema.prisma
prisma/migrations/20250504001825_init/: migration.sql
prisma/migrations/20250504012830_init1/: migration.sql
prisma/migrations/20250504023750_add_role_enum/: migration.sql
prisma/migrations/20250504032930_para_subject/: migration.sql
prisma/migrations/20250504034049_optional_assignment_instruction/: migration.sql
prisma/migrations/20250504050733_assignment_id/: migration.sql
prisma/migrations/20250504231947_meeting_session/: migration.sql
prisma/migrations/20250504233149_meeting_session_teacher_subject/: migration.sql
public/files/: student-template.xlsx
src/: index.ts
src/auth/: controller.ts  index.ts
src/config/: constants.ts  db.ts  mailer.ts
src/graphql/: index.ts
src/lib/doc_parser/: Cargo.toml  README.md  index.node.d.ts  index.ts  output.xlsx  package.json  test.js
src/lib/doc_parser/src/: lib.rs
src/middlewares/: errorhandler.ts
src/util/: errors.ts  mailer.ts  password-generator.ts  passwordGenerator.ts  response.ts
src/zoom/: controller.ts  index.ts
(+115 files in other folders)
